# hpc_submit

./: .gitignore  README.md  implement.md  improvements.md  pyproject.toml  requirement.md  validate.py
.github/workflows/: publish.yml
examples/: config.yaml
examples/pilot_project/: Dockerfile  data.txt  environment.yml  main.py
examples/sample_project/: main.py
src/ulhpc_submit/: __init__.py  __main__.py  cli.py  config.py  env_manager.py  errors.py  job_manager.py  job_script.py  logs.py  main.py  monitor.py  ssh_client.py  sync.py  usage.py
tests/: conftest.py  test_cli.py  test_config.py  test_env_manager.py  test_integration.py  test_job_manager.py  test_job_script.py  test_logs.py  test_monitor.py  test_pilot.py  test_ssh_client.py  test_sync.py  test_usage.py
