[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ulhpc-submit"
version = "0.2.0"
description = "Transparent task submission and monitoring for UL HPC (Iris)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "T. Wang"},
]
keywords = ["hpc", "slurm", "ul-hpc", "iris", "ssh", "sbatch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "paramiko>=2.11",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/IIllIlllIl/hpc_submit"
Repository = "https://github.com/IIllIlllIl/hpc_submit"
Issues = "https://github.com/IIllIlllIl/hpc_submit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
ulhpc-submit = "ulhpc_submit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
